2012-02-13  6.7.5-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-6, SVN revision 6851.

2012-02-13  6.7.5-6 Cristy  <quetzlzacatenango@image...>
  * Only set PDF & PS page size when explicitedly requested (e.g. -page).

2012-02-12  6.7.5-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-5, SVN revision 6840.

2012-02-12  6.7.5-5 Cristy  <quetzlzacatenango@image...>
  * Only use the canvas size of the very first frame of a GIF image sequence.

2012-02-11  6.7.5-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-4, SVN revision 6824.

2012-02-08  6.7.5-4 Cristy  <quetzlzacatenango@image...>
  * Set image alpha channel for -virtual-pixel background and transparent.
  * Get tiff:fill-order as an image artifact, not an image option.

2012-02-06  6.7.5-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-3, SVN revision 6732.

2012-02-06  6.7.5-3 Cristy  <quetzlzacatenango@image...>
  * TIFF no longer writes the incorrect fill order.

2012-02-05  6.7.5-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-2, SVN revision 6718.

2012-02-03  6.7.5-2 Cristy  <quetzlzacatenango@image...>
  * Add SyncImagePixelCache() to ensure cache morphology is consistent.
  * Patch so two -colorspace options return correct results for rowund-trip.

2012-02-02  6.7.5-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-1, SVN revision 6684.

2012-01-30  6.7.5-1 Cristy  <quetzlzacatenango@image...>
  * Support the -alpha remove option (use it to remove transparency from PDF,
    convert -density 200 apple.pdf -alpha remove x:).
  * Use union instead of casting gzFile and BZFILE.
  * Don't treat PSD user channel as alpha (patch from Dominic Benson).
  * Prevent overflow when casting short int to size_t when parsing a
    maliciously crafted image with an IFD whose all IOP tags' value offsets
    point to the beginning of the IFD itself [CVE-2012-0247].
  * Prevent DES when parsing a maliciously crafted image with an IFD whose