@@ -1,3 +1,10 @@
+
+2012-02-22  6.7.5-7 Anthony Thyssen <A.Thyssen@griffith...>
+  * Re-added the Iterative Distance function in morphology (as apposed to the
+    faster more direct 2-pass Distance Function that replaced it) so it can be
+    used in the special situation of  Constrainted Distance Morphology.
+    http://www.imagemagick.org/discourse-server/viewtopic.php??f=2&t=18032
+
 2012-02-13  6.7.5-6 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.5-6, SVN revision 6851.
 
